[metadata]
name = python-algorithms-example
summary = Playing with algorithms in Python
author = Michal Rostecki
author-email = michal.rostecki@gmail.com
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    python_algorithms_example

[wheel]
universal = 1